# jmap-convert

./: .gitignore  CNAME  Cargo.toml  README.md  index.html  layout.html  package-lock.json  package.json
.github/workflows/: build.yml
resources/: ical_001.ics  ical_002.ics  jscal_001.json  jscal_002.json  jscal_003.json  jscontact_001.json  jscontact_002.json  vcard_001.vcf  vcard_003.vcf
src/: main.rs
style/: output.css
